<resources>
    <string name="app_name">ATManager</string>

    <!-- Drawer -->
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="drawer_my_tasks">MyTasks</string>

    <!-- Dock -->
    <string name="dock_home">Home</string>
    <string name="dock_calendar">Calendar</string>
    <string name="dock_goals">Goals</string>
    <string name="dock_stats">Stats</string>

    <!-- Goals -->
    <string name="goals_today">TODAY</string>
    <string name="goals_week">THIS WEEK</string>
    <string name="goals_month">THIS MONTH</string>
    <string name="goals_year">THIS YEAR</string>
    <string name="goal_completed">COMPLETED</string>
    <string name="goal_add_input">+</string>


    <!-- Profile -->
    <string name="profile_button_tasks">Tasks</string>
    <string name="profile_button_goals">Goals</string>
    <string name="profile_button_stats">Statistics</string>
    <string name="profile_button_settings">Settings</string>


    <!-- Add task / goal -->
    <string name="title_activity_add_task_goal">Add Task/Goal</string>
    <string name="i_would_like_to">I would like to</string>
    <string name="frequency">Frequency</string>
    <string name="i_would">I would like to do/make/eat</string>
    <string name="x_times">Amount</string>
    <string name="something">What ?</string>
    <string name="times">Times</string>
    <string name="every">Every</string>
    <string name="input_missing">Input Missing</string>

    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>

    <!-- Add Task / Goal -->
    <string name="task_title">New task</string>
    <string name="goal_title">New goal</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="due_date_title">Due date</string>
    <string name="due_date_title_goal">Until</string>
    <string name="reminder_date_title">Reminder date</string>
    <string name="due_date">DD.MM.YYYY</string>
    <string name="due_time">HH.MM</string>
    <string name="tags">Tags</string>
    <string name="add_task">Add Task</string>
    <string name="add_goal">Add Goal</string>
    <string name="sign_out">Sign Out</string>
    <string name="welcome_message">Please login with you google account</string>

    <!-- Calendar -->
    <string name="server_client_id">14387612601-7b1lq5as1gdenabv9kch220obav46525.apps.googleusercontent.com</string>
    <string name="add_new_tag">Add new tag</string>

    <string name="add_new_folder">Add new Folder</string>
    <string name="add_new_tasklist">Add new TaskList</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_the_new_tag">Enter the new tag</string>
    <string name="tag">Tag</string>
    <string name="new_folder_name">New folder name</string>
    <string name="enter_the_new_folder_name">Enter the new folder name</string>
    <string name="which_folder">Which folder</string>
    <string name="new_tasklist_name">New tasklist name</string>
    <string name="folder_name">Folder name</string>
    <string name="notification_time_text">Notification Time</string>
    <string name="notification_hint">DD.MM.YYYY HH:MM</string>
    <string name="tasklist">TaskList</string>
    <string-array name="weekDays">
        <item>Mon</item>
        <item>Tue</item>
        <item>Wed</item>
        <item>Thu</item>
        <item>Fri</item>
        <item>Sat</item>
        <item>Sun</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string-array name="months">
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
    </string-array>

    <string name="confirm">Confirm</string>
    <string name="share_taskList">Share a taskList</string>
    <string name="email">Email</string>
    <string name="invitee_email">Invitee Email</string>

    <!-- new Tags / tasklists diag -->
    <string name="enter_new_tag_label">Enter a tag label</string>
    <string name="enter_new_tasklist_title">Enter a tasklist title</string>
</resources>
