<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/search"
        android:title="Search"
        android:icon="@drawable/ic_search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="collapseActionView|ifRoom" />

    <item
        android:id="@+id/action_settings"
        android:title="Settings"
        app:showAsAction="never" />

    <item
        android:id="@+id/sign_out"
        android:title="@string/sign_out" />

    <item
        android:id="@+id/add_tag"
        android:title="@string/add_new_tag" />

    <item
        android:id="@+id/add_folder"
        android:title="@string/add_new_folder" />

    <item
        android:id="@+id/add_tasklist"
        android:title="@string/add_new_tasklist" />


</menu>
