<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".dialog.ShareTaskListDiag">

    <TextView
        android:layout_width="wrap_content"
        style="@style/MaterialAlertDialog.MaterialComponents.Title.Text"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:padding="8dp"
        android:text="@string/share_taskList" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:padding="8dp"
        android:text="@string/invitee_email" />

    <EditText
        android:id="@+id/newTaskListName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:hint="@string/email"
        android:inputType="text"
        android:maxLength="@integer/tasklist_title"
        />



</LinearLayout>