<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frag_add_task"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    android:orientation="vertical"
    android:scrollbars="vertical"
    tools:context=".addContent.AddTaskFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:fontFamily="@font/arialbd"
        android:text="@string/task_title"
        android:textColor="@color/black"
        android:textSize="40sp" />

    <!-- Task title -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/frag_add_task_title_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/title"
        app:boxStrokeColor="@color/colorAccent"
        app:errorEnabled="true"
        app:hintTextColor="@color/colorAccent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/frag_add_task_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:cursorVisible="true"
            android:inputType="text"
            android:maxLength="@integer/task_title"
            android:maxLines="1"
            android:textCursorDrawable="@drawable/cursor_color"
            android:textSize="18sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Task description -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/frag_add_task_description_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/description"
        app:boxStrokeColor="@color/colorAccent"
        app:errorEnabled="true"
        app:hintTextColor="@color/colorAccent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/frag_add_task_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:cursorVisible="true"
            android:gravity="top|start"
            android:inputType="textMultiLine"
            android:textCursorDrawable="@drawable/cursor_color"
            android:textSize="18sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="20dp"
        android:background="@color/light_grey" />

    <!-- Task tags input -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/frag_add_task_tags_input"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/tags"
        app:boxStrokeColor="@color/colorAccent"
        app:errorEnabled="true"
        app:hintTextColor="@color/colorAccent">

        <com.google.android.material.textview.MaterialAutoCompleteTextView
            android:id="@+id/frag_add_task_autocomplete_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:cursorVisible="true"
            android:inputType="text"
            android:maxLines="1"
            android:paddingStart="10dp"
            android:paddingTop="15dp"
            android:paddingEnd="10dp"
            android:paddingBottom="15dp"
            android:textCursorDrawable="@drawable/cursor_color"
            android:textSize="18sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <!-- Task's confirmed tags -->
    <HorizontalScrollView
        android:id="@+id/frag_add_task_chip_group_horizontal_scrollview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none">

        <!--Container for the chips-->
        <com.google.android.material.chip.ChipGroup
            android:id="@+id/frag_add_task_chipgroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

        </com.google.android.material.chip.ChipGroup>
    </HorizontalScrollView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/dateTable"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/frag_add_task_due_date_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="10dp"
            android:text="@string/due_date_title"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="@id/frag_add_task_notification_text"
            app:layout_constraintStart_toStartOf="@id/frag_add_task_notification_text"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/frag_add_task_due_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:clickable="true"
            android:hint="@string/due_date"
            android:padding="10dp"
            android:textSize="18sp"
            app:layout_constraintLeft_toRightOf="@id/frag_add_task_due_date_text"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/frag_add_task_due_time"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:clickable="true"
            android:hint="@string/due_time"
            android:padding="10dp"
            android:textSize="18sp"
            app:layout_constraintLeft_toRightOf="@id/frag_add_task_due_date"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/frag_add_task_notification_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:padding="10dp"
            android:text="@string/reminder_date_title"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/frag_add_task_due_date_text" />

        <TextView
            android:id="@+id/frag_add_task_notification"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="10"
            android:clickable="true"
            android:hint="@string/notification_hint"
            android:padding="10dp"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/frag_add_task_due_date_text"
            app:layout_constraintTop_toBottomOf="@id/frag_add_task_due_date" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/directory_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:orientation="horizontal"
        android:padding="10dp"
        android:weightSum="2"
        app:layout_constraintBottom_toTopOf="@id/frag_validation_button"
        app:layout_constraintTop_toBottomOf="@id/dateTable">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:adjustViewBounds="true"
            android:src="@drawable/ic_folder_grey_24dp" />

        <Spinner
            android:id="@+id/frag_directory_choice_tag_spinner"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:padding="10dp"
            android:spinnerMode="dropdown" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/frag_validation_button"
            style="@style/AppTheme.Button.Icon.Validation"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

        <Button
            android:id="@+id/frag_add_task_cancel_button"
            style="@style/AppTheme.Button.Icon.Validation"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            app:icon="@drawable/ic_clear_white_24dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />
    </LinearLayout>


</LinearLayout>

